<resources>
    <string name="app_name">Vigilancia</string>
    <string name="action_settings">Settings</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="principal_fragment">Vigilancia</string>
    <string name="ejecutar_escenarios">Ejecutar Escenarios</string>
    <string name="escenarios_fragment">Escenarios</string>
    <string name="btn_ejecutar_escenario">Ejecutar</string>
    <string name="notificaciones_fragment">Notificaciones</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_fragment">Login</string>
    <string name="usuario_login">Usuario</string>
    <string name="ingresar_login">Ingresar</string>
    <string name="consultar_dispositivos">Consultar Dispositivos</string>
    <string name="dispositivos_fragment">Dispositivos</string>
    <string name="modo_operacion">Modo Operación</string>
    <string name="seleccionar_modo">Seleccionar</string>
    <string name="modo_operacion_nav">Modo Operación</string>
</resources>